compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__case.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go(a) {\n  case a {\n    #(2, a) -> a\n    #(1, 1) -> 1\n    #(a, b) -> a + b\n  }\n}\n"
---
module rec my.``mod``
let private go (a: (int64 * int64)) = begin
    match a with
    | (2L, a) ->
        a
    | (1L, 1L) ->
        1L
    | (a, b) ->
        a + b
end
