compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__constant_tuples.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nconst a = \"Hello\"\nconst b = 1\nconst c = 2.0\nconst e = #(\"bob\", \"dug\")\n        "
---
module rec my.``mod``

[<Literal>]
let private a = "Hello"
[<Literal>]
let private b = 1L
[<Literal>]
let private c = 2.0
let private e = ("bob", "dug")
