compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__constant_tuples1.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nconst e = #(\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n)\n"
---
module rec my.``mod``
let private e = ("loooooooooooooong", "loooooooooooong", "loooooooooooooong", "loooooooooooooong", "loooooooooooong", "loooooooooooooong")
