compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__single_value_tuple.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go() {\n    let value = #(\"1\")\n}\n"
---
module rec my.``mod``

let private go () = begin
    let value = ("1")
    value
end
