compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__tuple.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go() {\n  #(\"1\", \"2\", \"3\")\n}\n"
---
module rec my.``mod``
let private go () = begin
    ("1", "2", "3")
end
