compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__tuple_formatting.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\npub const e = #(\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n  \"a\", \"a\", \"a\", \"a\", \"a\", \"a\", \"a\",\n)\n"
---
module rec my.``mod``
let e = ("a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a")
