compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1\",\n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
---
module rec my.``mod``
let private go () = begin
    ("1", begin
        "2"
        "3"
    end)
end
