compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__tuples__tuple_with_block_element1.snap
---
source: compiler-core/src/fsharp/tests/tuples.rs
expression: "\nfn go() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
---
module rec my.``mod``
let private go () = begin
    ("1111111111111111111111111111111", ("1111111111111111111111111111111", "2", "3"), "3")
end
